tooling/nargo_cli/tests/snapshots/compile_failure/nested_slice_literal/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: struct `FooParent` is never constructed
  ┌─ src/main.nr:1:8
  │
1 │ struct FooParent<T> {
  │        --------- struct is never constructed
  │

error: No method named 'push_back' found for type '[Foo<[i32]>; 2]'
   ┌─ src/main.nr:21:13
   │
21 │     slice = slice.push_back(foo);
   │             --------------------
   │

Aborting due to 1 previous error
